--- a/admin/index.html
+++ b/admin/index.html
@@ -1,170 +1,180 @@
 <html>
 
-<!-- these 4 files always have to be included -->
 <link rel="stylesheet" type="text/css" href="../../lib/css/themes/jquery-ui/redmond/jquery-ui.min.css"/>
+<link rel="stylesheet" type="text/css" href="../../lib/css/jqGrid/ui.jqgrid-4.5.4.css"/>
+<link rel="stylesheet" type="text/css" href="../../lib/css/jquery.multiselect-1.13.css"/>
+
+<!-- use jquery -->
 <script type="text/javascript" src="../../lib/js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="../../socket.io/socket.io.js"></script>
 <script type="text/javascript" src="../../lib/js/jquery-ui-1.10.3.full.min.js"></script>
-
-
-<!-- optional: use jqGrid
-<link rel="stylesheet" type="text/css" href="../../lib/css/jqGrid/ui.jqgrid-4.5.4.css"/>
+<!-- use jqGrid -->
 <script type="text/javascript" src="../../lib/js/jqGrid/jquery.jqGrid-4.5.4.min.js"></script>
-<script type="text/javascript" src="../../lib/js/jqGrid/i18n/grid.locale-all.js"></script>
--->
+<script type="text/javascript" src="../../lib/js/jqGrid/grid.locale-all.js"></script>
 
-<!-- optional: use multiselect
-<link rel="stylesheet" type="text/css" href="../../lib/css/jquery.multiselect-1.13.css"/>
-<script type="text/javascript" src="../../lib/js/jquery.multiselect-1.13.min.js"></script>
--->
-
-<!-- these two file always have to be included -->
 <link rel="stylesheet" type="text/css" href="../../css/adapter.css"/>
 <script type="text/javascript" src="../../js/translate.js"></script>
 <script type="text/javascript" src="../../js/adapter-settings.js"></script>
 
-
 <!-- you have to define 2 functions in the global scope: -->
+<style>
+    .table_header {
+        background-color: blue;
+        color: white;
+    }
+    .ip {
+        width: 150px;
+        text-align: right;
+    }
+</style>
+
 <script type="text/javascript">
+    var rooms =   [];
+    var devices = [];
 
     // Dictionary (systemDictionary is global variable from adapter-settings.js)
     systemDictionary = {
-        "wiffi-wz settings": {"de": "Wiffi-wz Einstellungen", "en": "Wiffi-wz settings", "ru": "Пример"},
-        "local_server_ip":      {"en": "ip-adress of the local server", "de": "IP-Adresse des lokalen Servers"},
-        "local_server_port":      {"en": "port used by the local server", "de": "Port des lokalen Servers"},
-        "wiffi_ip":               {"en": "Wiffi-wz ip-address", "de": "IP-Adresse des Wiffi-wz"},
-        "wiffi_target":            {"en": "Receiver of Wiffi-wz's events", "de": "Empfänger für Wiffi-wz Meldungen"},
-        "wiffi_target_ccu_ip":     {"en": "Homematic CCU ip-address", "de": "IP-Adresse der Homematic CCU"},
-        "expert_settings":         {"en": "Expert settings", "de": "Experteneinstellungen"},
-        "exp_red_led":             {"en": "Red LED", "de": "Rote LED"},
-        "on":                      {"en": "on", "de": "an"},
-        "off":                     {"en": "off", "de": "aus"},
-        "on save adapter restarts with new config immediately": {
-            "de": "Beim Speichern von Einstellungen der Adapter wird sofort neu gestartet.",
-            "ru": "Сразу после сохранения настроек драйвер перезапуститься с новыми значениями"
-        }
+    "wiffi-wz settings": {"de": "Wiffi-wz Einstellungen", "en": "Wiffi-wz settings", "ru": "Пример"},
+    "wiffi devices": {"de": "Wiffis", "en": "Wiffis"},
+    "local server settings": {"de": "Lokale Server Einstellungen", "en": "local server settings"},
+    "local_server_ip":      {"en": "IP address", "de": "IP-Adresse"},
+    "local_server_port":      {"en": "port", "de": "Port"},
+    "exp_red_led":             {"en": "red LED", "de": "rote LED"},
+    "on":                      {"en": "on", "de": "an"},
+    "off":                     {"en": "off", "de": "aus"},
+    "on save adapter restarts with new config immediately": {
+      "de": "Beim Speichern von Einstellungen der Adapter wird sofort neu gestartet.",
+      "ru": "Сразу после сохранения настроек драйвер перезапуститься с новыми значениями"
+    }
     };
 
-    // the function loadSettings has to exist ...
-    function load(settings, onChange) {
-        if (!settings) return;
+    function setValue(id, value, onChange) {
+    // example: select elements with id=key and class=value and insert value
+    if ($('#' + id + '.value').attr('type') == 'checkbox') {
+      $('#' + id + '.value').prop('checked', value).change(function() {
+        onChange();
+      });
+    } else {
+      $('#' + id + '.value').val(value).change(function() {
+        onChange();
+      }).keyup(function() {
+        // Chack that only numbers entered
+        if ($(this).hasClass('number')) {
+          var val = $(this).val();
+          if (val) {
+            var newVal = '';
+            for (var i = 0; i < val.length; i++) {
+              if (val[i] >= '0' && val[i] <= '9') {
+                newVal += val[i];
+              }
+            }
 
-		// select elements with id=key and class=value and insert value
-        for (var key in settings) {
-            // example: select elements with id=key and class=value and insert value
-            if ($('#' + key + '.value').attr('type') == 'checkbox') {
-                $('#' + key + '.value').prop('checked', settings[key]).change(function () {
-					onChange();
-				});
-            } else {
-                $('#' + key + '.value').val(settings[key]).change(function () {
-					onChange();
-				}).keyup(function () {
-					$(this).trigger('change');
-				});
-            }
+            if (val != newVal) $(this).val(newVal);
+          }
         }
-        
-		// popoluate local server ips with ips
-        getIPs(function(ips) {
-            for (var i = 0; i < ips.length; i++) {
-                $('#local_server_ip').append('<option value="' + ips[i].address + '">' + ips[i].name + '</option>');
-            }
-            $('#local_server_ip.value').val(settings.bind);
-        });
-		
-		// Signal to admin, that no changes yet
-        onChange(false);
+
+        onChange();
+      });
     }
+    }
+
+    // the function loadSettings has to exist ...
+  function load(settings, onChange) {
+    if (!settings) return;
+
+    devices = settings.devices || [];
+
+    for (var key in settings) {
+      setValue(key, settings[key], onChange);
+    }
+    getIsAdapterAlive(function (isAlive) {
+      getEnums('rooms', function (err, list) {
+        rooms = list;
+        var $grid = _editTable('devices', ['name', 'ip', 'room'], devices, rooms, 460, function (action, obj) {
+          devices = getTableResult('devices', ['name', 'ip', 'room']);
+        });
+        if (isAlive || common.enabled) {
+          $grid.jqGrid('navButtonAdd', '#pager-devices', {
+            caption: '',
+            buttonicon: 'ui-icon-refresh',
+            onClickButton: function () {
+              sendTo(null, 'browse', null, function(list) {
+                for (var j = 0; j < list.length; j++) {
+                  var isFound = false;
+                  for (var i = 0; i < devices.length; i++) {
+                    if (devices[i].ip == list[j].ip) {
+                      isFound = true;
+                       break;
+                    }
+                  }
+                  if (!isFound) {
+                    onChange();
+                    addToTable('devices', {ip: list[j].ip, room: enumName2Id(rooms, list[j].roomName)});
+                  }
+                }
+              });
+            },
+            position: 'first',
+            id:       'add-object',
+            title:    _('update adapter information'),
+            cursor:   'pointer'
+          });
+        }
+      });
+    });
+
+    // popoluate local server ips with ips
+    getIPs(function(ips) {
+      for (var i = 0; i < ips.length; i++) {
+        $('#local_server_ip').append('<option value="' + ips[i].address + '">' + ips[i].name + '</option>');
+      }
+      $('#local_server_ip.value').val(settings.local_server_ip);
+    });
+
+    onChange(false);
+
+  }
 
     // ... and the function save has to exist.
     // you have to make sure the callback is called with the settings object as first param!
     function save(callback) {
-        // select elements with class=value and build settings object
+        // example: select elements with class=value and build settings object
         var obj = {};
         $('.value').each(function () {
-            var $this = $(this);
+          var $this = $(this);
+          if ($this.attr('type') == 'checkbox') {
+            obj[$this.attr('id')] = $this.prop('checked');
+          } else {
             obj[$this.attr('id')] = $this.val();
+          }
         });
-        callback(obj);
 
-        // here we have to send some settings to the wiffi-wz
-		switch(obj.wiffi_target) {
-			case 'IOBroker': 
-				// set wiffi-wz to send JSON data to the iobroker
-				setWiffiParam('http://' + obj.wiffi_ip, 'param:27:1');
-				setWiffiParam('http://' + obj.wiffi_ip, 'ccu:' + obj.local_server_ip + ':');
-			break;
-			case 'CCU': 
-				// set the ccu as receiver
-				setWiffiParam('http://' + obj.wiffi_ip, 'param:27:0');
-				setWiffiParam('http://' + obj.wiffi_ip, 'ccu:' + obj.wiffi_target_ccu_ip + ':');
-			break;
-			default:
-				console.log('Could not find wiffi target ' + obj.wiffi_target);
-		}
-		
-		// switch the red LED of the wiffi-wz on or off
-		switch(obj.exp_red_led) {
-			case true: 
-				// switch led on
-				setWiffiParam('http://' + obj.wiffi_ip, 'param:9:0');
-			break;
-			case false: 
-				// switch led off
-				setWiffiParam('http://' + obj.wiffi_ip, 'param:9:1');
-			break;
-			default:
-				console.log('Could not find wiffi LED state ' + obj.exp_red_led);
-		}
+        // Get edited table
+        obj.devices = getTableResult('devices', ['name', 'ip', 'room']);
 
+        callback(obj, {localLink: obj.webserverEnabled ? 'http://%ip%:' + obj.webserverPort : ''});
     }
-
-	function setWiffiParam(myUrl, myData) {
-		$.ajax({
-			url: myUrl,
-			data: myData,
-			async: false,
-			cache: false,
-			timeout: 20000,			
-			type: 'GET',
-			success: function (resp) {
-				//
-			},
-			error: function(e) {
-				alert('Error: '+e.statusText);
-			}  
-		});	
-	}
-	
 </script>
 
 <!-- you have to put your config page in a div with id adapter-container -->
 <div id="adapter-container">
 
     <table>
-        <tr><td><img src="wiffi-wz.png"/></td><td><h3 class="translate">wiffi-wz settings</h3></td></tr>
-        <tr><td class="translate">local_server_ip</td><td><select class="value" id="local_server_ip"></td></tr>
-        <tr><td class="translate">local_server_port</td><td><input class="value" id="local_server_port"/></td></tr>
-        <tr><td class="translate">wiffi_ip</td><td><input class="value" id="wiffi_ip"/></td></tr>
-        <tr><td class="translate">wiffi_target</td>
-            <td><input type="radio" id="wiffi_target" name="wiffi_target" class="value" value="IOBroker" checked="checked" onclick="document.getElementById('wiffi_target_ccu_ip').disabled=true">
-                <label for="wiffi_target_json">IO-Broker</label>
-                <input type="radio" id="wiffi_target" name="wiffi_target" class="value" value="CCU" onclick="document.getElementById('wiffi_target_ccu_ip').disabled=false">
-                <label for="wiffi_target_ccu">CCU</label>&nbsp;<span class="translate">wiffi_target_ccu_ip</span>&nbsp;<input class="value" id="wiffi_target_ccu_ip" disabled="true"/>
-            </td>
-        </tr>
-        <tr><td class="translate">----------------  expert_settings ----------------</td></tr>
         <tr>
-            <td class="translate">exp_red_led</td>
-            <td>
-                <input type="radio" id="exp_red_led" name="exp_red_led" class="value" value="true" checked="checked"/>
-                <label for="exp_red_led_on" class="translate">on</label>
-                <input type="radio" id="exp_red_led" name="exp_red_led" class="value" value="false"/>
-                <label for="exp_red_led_off" class="translate">off</label>
-            </td>
+            <td><img src="wiffi-wz.png"></td>
+            <td style="padding-top: 20px;padding-left: 10px"><h3 class="translate">wiffi-wz settings</h3></td>
         </tr>
     </table>
+
+    <h4 class="translate">local server settings</h4>
+    <table>
+        <tr><td class="translate">local_server_ip</td><td><select class="value" id="local_server_ip"></td></tr>
+        <tr><td class="translate">local_server_port</td><td><input class="value" id="local_server_port"/></td></tr>
+    </table>
+    <br>
+    <h4 class="translate">wiffi devices</h4>
+    <table id="devices"></table><div id="pager-devices"></div>
+    <br>
     <p class="translate">on save adapter restarts with new config immediately</p>
 </div>
 
