--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -135,7 +135,6 @@
             <div id="tab-devices" class="col s12 page">
                 <div class="col s12" id="values">
                     <a id="table-button-add" class="btn-floating waves-effect waves-light blue table-button-add"><i class="material-icons">add</i></a>
-                    <a id="table-button-search" class="btn-floating waves-effect waves-light blue disabled"><i class="material-icons">search</i><span class="translate">Search</span></a>
                     <div class="table-values-div">
                         <table class="table-values" style="width: 100%;">
                             <thead>
@@ -144,7 +143,7 @@
                                 <th data-name="name"     style="width: 30%" class="translate">wiffi name</th>
                                 <th data-name="ip"       class="translate">wiffi IP address</th>
                                 <th data-name="room" data-type="select" class="translate">wiffi room</th>
-                                <th data-name="type" data-type="select" data-options="Wiffi-wz;Weatherman" class="translate">wiffi type</th>
+                                <th data-name="type" data-type="select" data-options="Wiffi-wz;Weatherman;Rainyman" class="translate">wiffi type</th>
                                 <th data-buttons="delete" style="width: 40px"></th>
                             </tr>
                             </thead>
