fixed label overflow issue

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="input-field col s12 m4 l1">
                         <input class="value" size="5" maxlength="5" id="local_server_port" type="number">
-                        <label for="local_server_port" class="translate">local_server_port</label>
+                        <label for="local_server_port" class="translate active">local_server_port</label>
                     </div>
                 </div>
                 <div class="row">
