--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -143,7 +143,7 @@
                                 <th data-name="name"     style="width: 30%" class="translate">wiffi name</th>
                                 <th data-name="ip"       class="translate">wiffi IP address</th>
                                 <th data-name="room" data-type="select" class="translate">wiffi room</th>
-                                <th data-name="type" data-type="select" data-options="Wiffi-wz;Weatherman;Rainyman;Wiffi-pump" class="translate">wiffi type</th>
+                                <th data-name="type" data-type="select" data-options="Wiffi-wz;Weatherman(v67-);Weatherman(v76+);Wiffi-pump" class="translate">wiffi type</th>
                                 <th data-buttons="delete" style="width: 40px"></th>
                             </tr>
                             </thead>
